# wasm-wrapper-gen

./: .gitignore  Cargo.toml  README.md
docs/: compiled-example.md  usage-example.md
examples/boolean_test/: Cargo.toml  build.rs  run.js
examples/boolean_test/src/: lib.rs  main.rs
examples/fibonacci/: Cargo.toml  build.rs  fib.js
examples/fibonacci/src/: lib.rs  main.rs
examples/hello_world_strings/: Cargo.toml  build.rs  hello.js
examples/hello_world_strings/src/: lib.rs
examples/simple_summation/: Cargo.toml  build.rs  run.js
examples/simple_summation/src/: lib.rs  main.rs
src/: lib.rs
wasm-wrapper-gen-build/: Cargo.toml  README.md
wasm-wrapper-gen-build/src/: js_generation.rs  lib.rs  source_searching.rs  style.rs
wasm-wrapper-gen-build/src/generation/: mod.rs  stats.rs
wasm-wrapper-gen-impl/: Cargo.toml  README.md
wasm-wrapper-gen-impl/src/: lib.rs
wasm-wrapper-gen-shared/: Cargo.toml  README.md
wasm-wrapper-gen-shared/src/: arguments.rs  lib.rs  parsing.rs  processing.rs  types.rs
