[package]
name = "wasm-wrapper-gen"
version = "0.0.3"
authors = ["David Ross <daboross@daboross.net>"]
description = "JavaScript wrapper generation for rust code targeting wasm32-unknown-unknown"

repository = "https://github.com/daboross/wasm-wrapper-gen"
readme = "README.md"

license = "MIT"
keywords = ["code-generation", "bindings", "javascript", "wasm"]
categories = ["development-tools::ffi"]

include = ["Cargo.toml", "src/**/*", "LICENSE", "README.md"]

[dependencies]
proc-macro-hack = "0.4"
wasm-wrapper-gen-impl = { version = "0.0.3", path = "wasm-wrapper-gen-impl" }
