[package]
name = "wasm-wrapper-gen-build"
version = "0.0.1"
authors = ["David Ross <daboross@daboross.net>"]
description = "JavaScript-wrapper generation for rust code targeting wasm32-unknown-unknown (build-script side)"

repository = "https://github.com/daboross/wasm-wrapper-gen"
readme = "README.md"

license = "MIT"
keywords = ["code-generation", "bindings", "javascript", "wasm"]
categories = ["development-tools::ffi"]

[dependencies]
wasm-wrapper-gen-shared = { version = "0.0.1", path = "../wasm-wrapper-gen-shared" }
syn = { version = "0.11", features = ["full"] }
failure = "0.1"
