[package]
name = "wasm-wrapper-gen-impl"
version = "0.0.2"
authors = ["David Ross <daboross@daboross.net>"]
description = "Lower-level implementation detail of wasm-wrapper-gen"

repository = "https://github.com/daboross/wasm-wrapper-gen"
readme = "README.md"

license = "MIT"

[dependencies]
wasm-wrapper-gen-shared = { version = "0.0.2", path = "../wasm-wrapper-gen-shared" }
proc-macro-hack = "0.4"
syn = { version = "0.11", features = ["full"] }
quote = "0.3"
failure = "0.1"
arrayvec = "0.4"

[lib]
proc-macro = true
