[package]
name = "hello_world_strings"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-wrapper-gen = { version = "0.0.3", path = "../../" }

[build-dependencies]
wasm-wrapper-gen-build = { version = "0.0.3", path = "../../wasm-wrapper-gen-build/" }

# optimize for size
[profile.release]
opt-level = 'z'
